# app.js
@@ -1,24 +1,23 @@
 'use strict';
 
-var SwaggerRestify = require('swagger-restify-mw');
-var restify = require('restify');
-var app = restify.createServer();
-
+var SwaggerExpress = require('swagger-express-mw');
+var app = require('express')();
 module.exports = app; // for testing
 
 var config = {
   appRoot: __dirname // required config
 };
 
-SwaggerRestify.create(config, function(err, swaggerRestify) {
+SwaggerExpress.create(config, function(err, swaggerExpress) {
   if (err) { throw err; }
 
-  swaggerRestify.register(app);
+  // install middleware
+  swaggerExpress.register(app);
 
   var port = process.env.PORT || 10010;
   app.listen(port);
 
-  if (swaggerRestify.runner.swagger.paths['/hello']) {
+  if (swaggerExpress.runner.swagger.paths['/hello']) {
     console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
   }
 });
